<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" 
    android:background="@color/red">

    <RelativeLayout
        android:layout_width="275dp"
        android:layout_height="350dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_corners" >

        <EditText
            android:id="@+id/proxy_server_host_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/proxy_server_host"
            android:layout_below="@+id/proxy_server_host"
            android:ems="10"
            android:text="apps.loginto.me" />

        <TextView
            android:id="@+id/subfragment_toaccount_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/proxy_server_host_edittext"
            android:layout_below="@+id/proxy_server_host_edittext"
            android:text="@string/proxy_server_port" />

        <EditText
            android:id="@+id/proxy_server_port_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/subfragment_toaccount_textview"
            android:layout_below="@+id/subfragment_toaccount_textview"
            android:ems="10"
            android:hint="@string/proxy_server_port_default"
            android:text="443" />

        <Button
            android:id="@+id/proxy_updateconfig_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/proxy_server_port_edittext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp"
            android:background="@drawable/green_button"
            android:text="@string/proxy_updateconfig" />

        <TextView
            android:id="@+id/proxy_server_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="36dp"
            android:text="@string/proxy_server_ip" />

    </RelativeLayout>

</RelativeLayout>