<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:background="@drawable/rounded_corners" >

        <EditText
            android:id="@+id/register_fullname_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/register_fullname_textview"
            android:layout_below="@+id/register_fullname_textview"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/register_username_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/register_username_textview"
            android:layout_below="@+id/register_username_textview"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/register_email_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/register_username_edittext"
            android:layout_below="@+id/register_username_edittext"
            android:text="@string/register_email" />

        <EditText
            android:id="@+id/register_email_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/register_email_textview"
            android:layout_below="@+id/register_email_textview"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/register_password1_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/register_email_edittext"
            android:layout_below="@+id/register_email_edittext"
            android:text="@string/password_first" />

        <EditText
            android:id="@+id/register_password1_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/register_password1_textview"
            android:layout_below="@+id/register_password1_textview"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/register_password2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/register_password1_edittext"
            android:layout_below="@+id/register_password1_edittext"
            android:text="@string/register_password2" />

        <EditText
            android:id="@+id/register_password2_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/register_password2_textview"
            android:layout_below="@+id/register_password2_textview"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/register_username_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/register_fullname_edittext"
            android:layout_below="@+id/register_fullname_edittext"
            android:text="@string/register_username" />

        <Button
            android:id="@+id/register_registernow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_password2_edittext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:background="@drawable/green_button"
            android:text="@string/register_register" />

        <TextView
            android:id="@+id/register_fullname_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/register_fullname" />

    </RelativeLayout>

</RelativeLayout>