<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:background="@drawable/rounded_corners" >

        <TextView
            android:id="@+id/signin_password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/signin_usernamefield_edittext"
            android:layout_below="@+id/signin_usernamefield_edittext"
            android:layout_marginTop="19dp"
            android:text="@string/siginin_password" />

        <EditText
            android:id="@+id/signin_passwordfield_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/signin_password_textview"
            android:layout_below="@+id/signin_password_textview"
            android:ems="10"
            android:inputType="textPassword"
            android:textColorLink="#c9310d" />

        <CheckBox
            android:id="@+id/signin_rememberme_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/signin_passwordfield_edittext"
            android:layout_below="@+id/signin_passwordfield_edittext"
            android:layout_marginTop="23dp"
            android:text="@string/siginin_remember_me"
            android:textColorLink="#c9310d" />

        <Button
            android:id="@+id/signin_submitbutton_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/signin_rememberme_checkbox"
            android:layout_alignRight="@+id/signin_passwordfield_edittext"
            android:layout_below="@+id/signin_rememberme_checkbox"
            android:layout_marginTop="30dp"
            android:background="@drawable/green_button"
            android:text="@string/sigin_submitlogin" />

        <EditText
            android:id="@+id/signin_usernamefield_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signin_username_textview"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:textColorLink="#c9310d" />

        <TextView
            android:id="@+id/signin_username_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/signin_usernamefield_edittext"
            android:layout_alignParentTop="true"
            android:layout_marginTop="18dp"
            android:text="@string/signin_username" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="28dp"
        android:text="New User?" />

    <TextView
        android:id="@+id/fragment_signin_forgotpassword_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fragment_signin_signup_textview"
        android:layout_alignBottom="@+id/fragment_signin_signup_textview"
        android:layout_alignRight="@+id/relativeLayout1"
        android:text="@string/forgotpassword"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fragment_signin_forgotpassword_textview"
        android:layout_alignBottom="@+id/fragment_signin_forgotpassword_textview"
        android:layout_alignLeft="@+id/fragment_signin_forgotpassword_textview"
        android:layout_toLeftOf="@+id/fragment_signin_forgotpassword_textview"
        android:text="|" />

    <TextView
        android:id="@+id/fragment_signin_signup_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/signupnow"
        android:textColor="@color/white" />

</RelativeLayout>