<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivityGroup" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rounded_corners"
        android:paddingBottom="10dp" >

        <Button
            android:id="@+id/myaccount_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myaccount_email_edittext"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:layout_toRightOf="@+id/subfragment_date_textview"
            android:text="@string/myaccount_delete"
            android:background="@drawable/green_button" />

        <TextView
            android:id="@+id/subfragment_date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/myaccount_delete_button"
            android:layout_alignBottom="@+id/myaccount_delete_button"
            android:layout_alignLeft="@+id/myaccount_accountname_textview"
            android:layout_marginLeft="5dp"
            android:text="@string/deleteAccount" />

        <EditText
            android:id="@+id/myaccount_username_edittext"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/transaction_date"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/myaccount_accountname_textview"
            android:ems="10" 
            android:layout_marginRight="5dp"/>

        <EditText
            android:id="@+id/myaccount_password_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_alignLeft="@+id/myaccount_email_textview"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/transaction_date"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginRight="5dp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/myaccount_email_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_alignLeft="@+id/myaccount_email_textview"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/myaccount_password_edittext"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginRight="5dp" />

        <TextView
            android:id="@+id/transaction_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/myaccount_username_edittext"
            android:text="Password"
            android:layout_marginLeft="5dp" />

        <TextView
            android:id="@+id/myaccount_accountname_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dp"
            android:text="Name" 
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/myaccount_email_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/myaccount_password_edittext"
            android:text="Email" 
            android:layout_marginLeft="5dp"/>

        <Button
            android:id="@+id/myaccount_updateAccount_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myaccount_delete_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:background="@drawable/green_button"

            android:text="@string/myaccount_updateaccount" />

    </RelativeLayout>

</RelativeLayout>